<resources>
    <string name="app_name">GitHub Seeker</string>
    <string name="repo_lang_logo_description">The logo of programming language which this project used</string>
    <string name="github_seeker">Github Seeker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_avatar_logo">Client avatar logo</string>
    <string name="download">Download!</string>
    <string name="username">Username: </string>
    <string name="owner">Owner:</string>
    <string name="clone_url">Clone URL:</string>
    <string name="git_url">Git URL:</string>
    <string name="ssh_url">SSH URL:</string>
    <string name="contains">Contains:</string>
    <string name="files">files</string>
    <string name="dir">dir</string>
    <string name="name">Name: </string>
    <string name="blog">Blog: </string>
    <string name="url">URL: </string>
    <string name="latest_activities">Latest Activities</string>
    <string name="star_this_repository">Star this repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="trends">Trends</string>
    <string name="filter">Filter</string>
    <string name="trends_type">Trends type:</string>
    <string name="language">Language:</string>
    <string name="since">Since:</string>
    <string name="done">Done</string>
    <string name="avatar_content_description">\'s avatar</string>
    <string name="follow">Follow!</string>
    <string name="readme">README</string>

    <array name="since_values">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </array>

    <string-array name="trends_values">
        <item>Repositories</item>
        <item>Developers</item>
    </string-array>
</resources>
