<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:background="@color/primaryDarkColor">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/trends_type_text"
                android:text="@string/trends_type"
                android:textColor="@color/titleColor"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_globe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/trends_type_text"
                app:layout_constraintBaseline_toBaselineOf="@id/trends_type_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundTint="@color/primaryTextColor"
                android:id="@+id/trends_type_spinner"
                tools:listitem="@layout/spinner_text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/trends_type_text"
                app:layout_constraintTop_toBottomOf="@id/trends_type_text"
                android:id="@+id/trends_language_text"
                android:textColor="@color/titleColor"
                android:drawablePadding="4dp"
                android:text="@string/language"
                app:drawableStartCompat="@drawable/ic_language_type" />

        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/trends_type_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/trends_language_text"
                android:id="@+id/trends_language_spinner"
                app:backgroundTint="@color/primaryTextColor"
                tools:listitem="@layout/spinner_text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trends_since_text"
                app:layout_constraintStart_toStartOf="@id/trends_type_text"
                app:layout_constraintTop_toBottomOf="@id/trends_language_text"
                android:layout_marginTop="8dp"
                android:text="@string/since"
                android:textColor="@color/titleColor"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_time" />

        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/trends_type_spinner"
                app:layout_constraintBaseline_toBaselineOf="@id/trends_since_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/trends_since_spinner"
                app:backgroundTint="@color/primaryTextColor"
                tools:listitem="@layout/spinner_text"/>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trends_filter_done"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintTop_toBottomOf="@id/trends_since_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="8dp"
                android:text="@string/done"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>