<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="false"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <androidx.core.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/primaryColor">
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                        android:background="?colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize">

                    <ImageView
                            android:id="@+id/hero_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_github"
                            android:contentDescription="@string/app_name"/>

                    <TextView
                            android:id="@+id/header_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:layout_gravity="center_vertical"
                            android:ellipsize="end"
                            android:textColor="@color/design_default_color_on_primary"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                            android:text="@string/github_seeker"
                            tools:ignore="RtlSymmetry"/>
                </androidx.appcompat.widget.Toolbar>
            </androidx.cardview.widget.CardView>

            <fragment
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/nav_host_fragment"
                    app:navGraph="@navigation/nav_main"
                    app:defaultNavHost="true"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/navigation"
            android:layout_gravity="start"
            app:menu="@menu/drawer_menu">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="92dp"
                    android:layout_height="92dp"
                    android:layout_margin="4dp"
                    android:id="@+id/avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/client_avatar_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_margin="3dp"
                    app:layout_constraintBottom_toTopOf="@id/name"
                    app:layout_constraintTop_toTopOf="@+id/avatar"
                    app:layout_constraintStart_toEndOf="@+id/avatar"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:layout_margin="3dp"
                    app:layout_constraintBottom_toTopOf="@id/blog"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    app:layout_constraintStart_toEndOf="@id/avatar"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/blog"
                    android:maxLines="1"
                    android:layout_margin="3dp"
                    android:ellipsize="end"
                    android:autoLink="web"
                    app:layout_constraintBottom_toTopOf="@id/url"
                    app:layout_constraintStart_toEndOf="@id/avatar"
                    app:layout_constraintTop_toBottomOf="@id/name"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/url"
                    android:maxLines="1"
                    android:layout_margin="3dp"
                    android:ellipsize="end"
                    android:autoLink="web"
                    app:layout_constraintStart_toEndOf="@id/avatar"
                    app:layout_constraintTop_toBottomOf="@+id/blog"
                    app:layout_constraintBottom_toBottomOf="@+id/avatar"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>